<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Home -->
    <string name="home_empty_vault_title">Your vault is empty</string>
    <string name="home_empty_vault_subtitle">Get started by creating your first item.</string>
    <string name="home_empty_vault_login_title">No logins found</string>
    <string name="home_empty_vault_login_subtitle">Get started by creating your first login item.</string>
    <string name="home_empty_vault_aliases_title">No aliases found</string>
    <string name="home_empty_vault_aliases_subtitle">Get started by creating your first alias item.</string>
    <string name="home_empty_vault_notes_title">No notes found</string>
    <string name="home_empty_vault_notes_subtitle">Get started by creating your first note item.</string>
    <string name="home_empty_vault_logins_mfa_title">No logins with TOTP found</string>
    <string name="home_empty_vault_logins_mfa_subtitle">Get started by creating your first login with TOTP.</string>
    <string name="home_empty_vault_identity_title">No identity found</string>
    <string name="home_empty_vault_identity_subtitle">Get started by creating your first identity item.</string>
    <string name="home_empty_vault_cc_title">No credit card found</string>
    <string name="home_empty_vault_cc_subtitle">Get started by creating your first credit card item.</string>
    <string name="home_empty_shared_items_title">No shared items found</string>
    <string name="home_empty_shared_items_with_me_subtitle">No items have been shared with you.</string>
    <string name="home_empty_shared_items_by_me_subtitle">No items have been shared by you.</string>

    <string name="home_empty_read_only_vault_title">This vault is empty</string>
    <string name="home_empty_read_only_vault_subtitle">You can\'t add items to a read-only vault.</string>
    <string name="home_empty_vault_create_login">Create a login</string>
    <string name="home_empty_vault_create_alias">Create a Hide-my-email alias</string>
    <string name="home_empty_vault_create_note">Create a note</string>
    <string name="home_empty_vault_create_credit_card">Create a credit card</string>
    <string name="home_empty_vault_create_identity">Create an identity</string>
    <string name="error_observing_items" comment="Error message shown whenever there is an error loading the items">Error loading items</string>
    <string name="error_refreshing">Error performing refresh</string>
    <string name="home_snackbar_login_moved_to_trash">Login moved to trash</string>
    <string name="home_snackbar_alias_moved_to_trash">Alias moved to trash</string>
    <string name="home_snackbar_note_moved_to_trash">Note moved to trash</string>
    <string name="home_snackbar_credit_card_moved_to_trash">Credit card moved to trash</string>
    <string name="home_snackbar_identity_moved_to_trash">Identity moved to trash</string>
    <string name="home_snackbar_move_to_trash_error">Item could not be moved to trash</string>
    <string name="home_snackbar_items_move_to_trash_success">Items moved to trash</string>
    <string name="home_snackbar_items_move_to_trash_error">Items could not be moved to trash</string>
    <string name="home_toast_items_selected_read_only">Read-only items cannot be selected</string>
    <string name="home_autofill_banner_title">Enjoy the magic of AutoFill</string>
    <string name="home_autofill_banner_text">One tap and—presto!—your username and password are filled in instantly.</string>
    <string name="home_autofill_banner_settings">Turn on Autofill ›</string>
    <string name="home_trial_banner_title">Our welcome gift to you</string>
    <string name="home_trial_banner_text">7 days to try premium features for free. Only during your first week of Proton Pass.</string>
    <string name="home_trial_banner_settings">Learn more ›</string>
    <string name="home_drawer_all_items">All items</string>
    <string name="sl_sync_banner_title">Sync your aliases from SimpleLogin</string>
    <plurals name="sl_sync_banner_text">
        <item quantity="one">You have %d alias that is present in SimpleLogin but missing in Proton Pass. Would you like to sync it?</item>
        <item quantity="other">You have %d aliases that are present in SimpleLogin but missing in Proton Pass. Would you like to sync them?</item>
    </plurals>
    <string name="sl_sync_banner_settings">Sync aliases ›</string>
    <string name="sl_sync_banner_note">Once synced, deleting aliases in Pass will also delete them in SimpleLogin.</string>
    <string name="home_notification_permission_banner_title">Get important updates</string>
    <string name="home_notification_permission_banner_text">Enable push notifications to be informed when others share a vault with you.</string>
    <string name="home_notification_permission_banner_settings">Enable permission ›</string>
    <string name="home_invite_banner_title">Vault shared with you</string>
    <string name="home_invite_banner_subtitle">You\'re invited to a shared vault. Tap for details.</string>
    <string name="home_item_invite_banner_title" comment="placeholder is replaced by an email address">%s wants to share an item with you.</string>
    <string name="home_item_invite_banner_subtitle">Tap for details.</string>
    <!-- Common bottomsheet -->
    <string name="bottomsheet_copy_password">Copy password</string>
    <string name="bottomsheet_copy_username">Copy username</string>
    <string name="bottomsheet_copy_email">Copy email address</string>
    <string name="bottomsheet_copy_number">Copy number</string>
    <string name="bottomsheet_copy_cvv">Copy security code</string>
    <string name="bottomsheet_copy_note">Copy note</string>
    <string name="bottomsheet_edit">Edit</string>
    <string name="bottomsheet_copy_full_name">Copy full name</string>
    <!-- Clipboard -->
    <string name="alias_copied_to_clipboard">Alias copied</string>
    <string name="note_copied_to_clipboard">Note copied</string>
    <string name="full_name_copied_to_clipboard">Full name copied</string>
    <string name="email_copied_to_clipboard">Email address copied</string>
    <string name="username_copied_to_clipboard">Username copied</string>
    <string name="password_copied_to_clipboard">Password copied</string>
    <string name="credit_card_number_copied_to_clipboard">Credit card number copied</string>
    <string name="credit_card_cvv_copied_to_clipboard">Security code copied</string>
    <string name="item_too_long_copied_to_clipboard" comment="Snackbar message that's shown to the user whenever an action where the content that would be copied to the clipboard cannot be performed due to the size of the text">Content was too long, partially copied to the clipboard</string>
    <!-- Vault drawer -->
    <string name="vault_drawer_vaults_title">Vaults</string>
    <plurals name="vault_drawer_vaults_item_count">
        <item quantity="one">%d item</item>
        <item quantity="other">%d items</item>
    </plurals>
    <string name="vault_drawer_create_vault">Create vault</string>
    <string name="vault_drawer_item_trash">Trash</string>
    <string name="vault_drawer_all_vaults">All vaults</string>
    <!-- Vault management -->
    <string name="vault_delete_dialog_title">Delete vault</string>
    <string name="vault_delete_dialog_cancel_action">Cancel</string>
    <string name="vault_delete_dialog_delete_action">Delete</string>
    <string name="snackbar_delete_vault_success">Vault deleted</string>
    <string name="snackbar_delete_vault_error">Vault not deleted</string>
    <!-- Search top bar -->
    <string name="search_topbar_placeholder_all_vaults">Search in all vaults…</string>
    <string name="search_topbar_placeholder_vault">Search in %s…</string>
    <string name="search_topbar_placeholder_trash">Search in Trash…</string>
    <string name="search_topbar_placeholder_pinning">Search in Pinned…</string>
    <string name="search_topbar_placeholder_shared_by_me">Search in Shared by me…</string>
    <string name="search_topbar_placeholder_shared_with_me">Search in Shared with me…</string>
    <string name="item_type_filter_list_icon_content_description">Item type icon</string>
    <string name="item_type_filter_all">All</string>
    <string name="item_type_filter_login">Login</string>
    <string name="item_type_filter_alias">Alias</string>
    <string name="item_type_filter_note">Note</string>
    <string name="item_type_filter_credit_card">Card</string>
    <string name="item_type_filter_identity">Identity</string>
    <string name="item_type_filter_login_totp">Login with TOTP</string>
    <string name="item_type_filter_items_shared_with_me">Shared with me</string>
    <string name="item_type_filter_items_shared_by_me">Shared by me</string>
    <!-- Trash -->
    <string name="trash_empty_list_title">Trash empty</string>
    <string name="trash_empty_list_message">Items moved to trash appear here.</string>
    <string name="bottomsheet_trash_all_items_title">Trash</string>
    <string name="bottomsheet_restore_all_items">Restore all items</string>
    <string name="bottomsheet_empty_trash">Empty trash</string>
    <string name="bottomsheet_select_items">Select items</string>
    <string name="trash_error_clearing_trash">Error clearing trash</string>
    <string name="trash_success_restoring_items">Items restored</string>
    <string name="trash_error_restoring_items">Error restoring items</string>
    <string name="trash_error_deleting_item">Error deleting item</string>
    <string name="trash_success_deleting_item">Item deleted</string>
    <string name="trash_deleting_items_error">Error deleting items</string>
    <string name="trash_deleting_items_success">Items deleted</string>
    <!-- Alerts -->
    <string name="alert_confirm_clear_trash_title">Clear trash?</string>
    <string name="alert_confirm_clear_trash_message">Are you sure you want to clear the trash? All your trashed items will be deleted permanently</string>
    <string name="alert_confirm_restore_all_title">Restore all items?</string>
    <string name="alert_confirm_restore_all_message">Are you sure you want to restore all the trashed items?</string>
    <plurals name="alert_confirm_restore_items_title">
        <item quantity="one">Restore %d item?</item>
        <item quantity="other">Restore %d items?</item>
    </plurals>
    <plurals name="alert_confirm_restore_items_message">
        <item quantity="one">Are you sure you want to restore the trashed item?</item>
        <item quantity="other">Are you sure you want to restore the %d trashed items?</item>
    </plurals>
    <plurals name="alert_confirm_trash_items_title">
        <item quantity="one">Move to trash %d item?</item>
        <item quantity="other">Move to trash %d items?</item>
    </plurals>
    <plurals name="alert_confirm_trash_items_message">
        <item quantity="one">Are you sure you want to move the item to the trash?</item>
        <item quantity="other">Are you sure you want to move %d items to the trash?</item>
    </plurals>
    <plurals name="alert_confirm_delete_items_title">
        <item quantity="one">Delete permanently %d item?</item>
        <item quantity="other">Delete permanently %d items?</item>
    </plurals>
    <plurals name="alert_confirm_delete_items_message">
        <item quantity="one">Are you sure you want to delete the item? This action is irreversible</item>
        <item quantity="other">Are you sure you want to delete the %d items? This action is irreversible</item>
    </plurals>
    <!-- Recent search -->
    <string name="recent_search_header_count">Recent searches</string>
    <string name="recent_search_clear">Clear</string>
    <string name="recent_search_remove_item">Remove from recent searches</string>
    <!-- Pinning -->
    <string name="home_snackbar_items_pinned_success">Items pinned successfully</string>
    <string name="home_snackbar_items_pinned_partial_success">Error pinning some of the items</string>
    <string name="home_snackbar_items_pinned_error">Error pinning the items</string>
    <string name="home_snackbar_items_unpinned_success">Items unpinned successfully</string>
    <string name="home_snackbar_items_unpinned_partial_success">Error unpinning some of the items</string>
    <string name="home_snackbar_items_unpinned_error">Error unpinning the items</string>
    <string name="home_snackbar_items_alias_enabled_success">Alias enabled successfully</string>
    <string name="home_snackbar_items_alias_enabled_partial_success">Error enabling some of the aliases</string>
    <string name="home_snackbar_items_alias_enabled_error">Error enabling aliases</string>
    <string name="home_snackbar_items_alias_disabled_success">Alias disabled successfully</string>
    <string name="home_snackbar_items_alias_disabled_partial_success">Error disabling some of the aliases</string>
    <string name="home_snackbar_items_alias_disabled_error">Error disabling aliases</string>
    <string name="bulk_action_unpin">Unpin</string>
    <string name="bulk_action_pin">Pin</string>
    <string name="bulk_action_enable_alias">Enable alias</string>
    <string name="bulk_action_disable_alias">Disable alias</string>
</resources>
