...
    <string name="item_list_header_custom_type">Custom items</string>
    <string name="item_list_header_shared_with_me">Shared with me</string>
    <string name="item_list_header_shared_by_me">Shared by me</string>
    <!-- Bottomsheets -->
    <string name="bottomsheet_confirm_button">Confirm</string>
    <string name="bottomsheet_cancel_button">Cancel</string>
    <string name="bottomsheet_move_to_trash">Move to trash</string>
    <string name="bottomsheet_pin_item">Pin</string>
    <string name="bottomsheet_unpin_item">Unpin</string>
    <string name="bottomsheet_view_item_history">View history</string>
    <string name="bottomsheet_monitor_exclude">Exclude from monitoring</string>
    <string name="bottomsheet_monitor_include">Include in monitoring</string>
    <string name="bottomsheet_migrate_item_v2">Move</string>
...
    <string name="bottomsheet_delete_permanently">Delete permanently</string>
    <string name="bottomsheet_restore">Restore</string>
    <string name="bottomsheet_leave">Leave</string>
    <string name="bottomsheet_duplicate">Duplicate</string>
    <string name="bottomsheet_no_actions">No actions available</string>
    <!-- Actions -->
    <string name="action_content_description_menu" comment="Alt description for accessibility purposes on the three dots button that opens a contextual menu">Open item action menu</string>
    <string name="action_upgrade_now">Upgrade now</string>
    <string name="action_not_now">Not now</string>
    <string name="action_learn_more">Learn more</string>
    <string name="action_enable">Enable</string>
    <string name="action_view_details">View details</string>
    <string name="action_see_all">See all</string>
...
